INFRA/kustomize/shelfware/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-shelfware
  labels:
    istio-injection: enabled
